<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:stretchColumns="*" >
		<TableRow>
			<Button
				android:id="@+id/add_one_serving_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/one_serving_button_label"
				android:onClick="onOneServingClick" />
			<Button
				android:id="@+id/add_two_servings_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/two_serving_button_label"
				android:onClick="onTwoServingsClick" />
			<Button
				android:id="@+id/add_custom_serving_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/custom_serving_button_label"
				android:onClick="onCustomServingClick" />
			<Button
				android:id="@+id/undo_last_serving_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/undo_serving_button_label"
				android:onClick="onUndoClick" />
		</TableRow>
	</TableLayout>
	<TextView
		android:id="@+id/consumption_textview"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
		android:text="@string/consumption_label" />
</LinearLayout>
