<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<include layout="@layout/title_strip"/>
    
    <LinearLayout style="@style/TitleBar">
        <TextView
        	style="@style/TitleBarText"
        	android:textColor="@color/amount_color"
        	android:text="@string/custom_entry_title" />    
    	<View style="@style/TitleBarSpacer" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="@dimen/layout_padding" >
		<EditText
			android:id="@+id/amount_edittext"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:hint="Amount" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/custom_entry_type_of_units_label" />
		<RadioGroup
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
			<RadioButton
				android:id="@+id/radio_metric"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/custom_entry_metric_label"
				android:onClick="onRadioClick" />
			<RadioButton
				android:id="@+id/radio_non_metric"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="@string/custom_entry_non_metric_label"
				android:onClick="onRadioClick" />	
		</RadioGroup>
		<TextView
			android:id="@+id/conversion_textview"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_size" />
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:stretchColumns="*">
			<TableRow>
				<Button
					android:id="@+id/save_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/custom_entry_save_label"
					android:onClick="onSaveClick" />
				<Button
					android:id="@+id/cancel_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/custom_entry_cancel_label"
					android:onClick="onCancelClick" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>